--- a/portfolio-client/src/App.css
+++ b/portfolio-client/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+
+
+
+/* Scrollbar Styles */
+/* For WebKit browsers (e.g., Chrome, Safari) */
+/* ::-webkit-scrollbar {
+  width: 5px; 
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #f25476; 
+  border-radius: 6px; 
+}
+
+::-webkit-scrollbar-track {
+  background-color: #8AAAE5; 
+} */
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: #8AAAE5;
+  /* transition: var(--transition); */
+}
+
+::-webkit-scrollbar-thumb:hover,
+::-webkit-scrollbar-thumb:active {
+  /* background: orangered; */
+  background: transparent;
+  border: 2px solid #f25476;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  cursor: none;
+}
