--- a/portfolio-client/src/pages/Service/Service.css
+++ b/portfolio-client/src/pages/Service/Service.css
@@ -1,3 +1,21 @@
+.service__card{
+    background-color: var(--secondary-color)93;
+    -webkit-box-shadow: 0 0 32px 32px #dddddd;
+        -moz-box-shadow: 0 0 32px 32px #dddddd;
+        box-shadow: 0 0 32px 32px #dddddd;
+        /* background-color: var(--secondary-color); */
+        font-size: 18px;
+        border-radius: 5px;
+        /* word-spacing: 2x; */
+        letter-spacing: 1px;
+}
+
+
+
+
+
+
+
 .icon-style {
     /* width: 150px; */
     transition: color 0.3s ease-in-out;
@@ -7,12 +25,34 @@
     color: #f25476;
     /* Specify the color you want on hover */
 }
+.color_custom_text{
+    color: #f25476dc;
+}
 
 .service-box {
     text-align: center;
+     
+    
     
 }
+.bg-custom-Color{
+    transition: color 0.3s ease-in-out;
+    background-color: aliceblue;
+    border-radius: 20px ;
+    height: 480px !important;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.bg-custom-Color:hover {
+    transition: color 0.3s ease-in-out;
+    background-color: rgb(219, 232, 243);
+    border-radius: 20px ;
 
+}
+/* Add the following CSS rules */
+.bg-custom-Color:hover .icon-style {
+    color: #f25476;
+}
 /* .service-box:hover {
     background-color: #f0f0f0;
 
@@ -21,8 +61,8 @@
 .icon_back_style{
     text-align: center;
     margin: auto !important;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     transition: color 0.3s ease-in-out;
     background-color: aliceblue;
     border-radius: 50%;
@@ -34,8 +74,8 @@
 
 .icon_back_style:hover{
     margin: auto !important;
-    width: 200px;
-    height: 200px;
+    width: 250px;
+    height: 250px;
     transition: color 0.3s ease-in-out;
     background-color: aliceblue;
     color: #f25476;
