--- a/portfolio-client/src/pages/Contact/Contact.css
+++ b/portfolio-client/src/pages/Contact/Contact.css
@@ -4,13 +4,16 @@
     -moz-box-shadow: 0px 6px 32px 11px #dddddd;
     box-shadow: 0px 6px 32px 11px #dddddd;
 }
+
 .bg__color__white {
     background-color: #e6e5e5d0;
 }
-.image__round{
-        border-radius: 30px;
-         margin-bottom: 30px;
+
+.image__round {
+    border-radius: 30px;
+    margin-bottom: 30px;
 }
+
 .btn_color_pink {
     background-color: var(--primary-color) !important;
     color: #fff;
@@ -30,6 +33,108 @@
     border: 1px solid #e9385f !important;
     /* box-shadow: 1px 1px #888888; */
 }
-.custom__mt-7rem{
-    margin-top: 7rem !important;
+
+.custom__mt-7rem {
+    margin-top: 7rem;
+}
+
+.contact__image {
+    width: 350px;
+    height: 300px;
+}
+
+.contact-form input {
+    /* font-size: small; */
+    /* width: 80%; */
+    margin: auto;
+    margin-top: 5px;
+    caret-color: var(--primary-color);
+    outline: none;
+    color: var(--primary-color);
+    /* box-shadow: inset 0 -1px 0 #ddd; */
+
+}
+
+.contact-form input:focus {
+    border: 1px solid var(--primary-color);
+    outline: none;
+    box-shadow: 0 0 0 0.1rem var(--primary-color);
+}
+
+.contact-form textarea {
+    /* font-size: small; */
+    /* width: 80%; */
+    margin: auto;
+    margin-top: 5px;
+    caret-color: var(--primary-color);
+    outline: none;
+    color: var(--primary-color);
+}
+
+.contact-form textarea:focus {
+    border: 1px solid var(--primary-color);
+    outline: none;
+    box-shadow: 0 0 0 0.1rem var(--primary-color);
+}
+
+
+@media (min-width: 320px) and (max-width: 768px) {
+    .contact__image {
+        width: 250px;
+        height: 200px;
+    }
+
+    .custom__mt-7rem {
+        margin-top: 5vh;
+    }
+
+    .contact-us-custom-col {
+        margin-left: 0;
+        text-align: center;
+    }
+
+    .contact-form {
+        margin: auto;
+    }
+
+    .contact-form input {
+        font-size: small;
+        width: 80%;
+        margin: auto;
+        margin-top: 5px;
+        caret-color: var(--primary-color);
+        outline: none;
+        color: var(--primary-color);
+
+    }
+
+    .contact-form input:focus {
+        border: 1px solid var(--primary-color);
+        outline: none;
+        box-shadow: 0 0 0 0.1rem var(--primary-color);
+    }
+
+    .contact-form textarea {
+        font-size: small;
+        width: 80%;
+        margin: auto;
+        margin-top: 5px;
+        caret-color: var(--primary-color);
+        outline: none;
+        color: var(--primary-color);
+    }
+
+    .contact-form textarea:focus {
+        border: 1px solid var(--primary-color);
+        outline: none;
+        box-shadow: 0 0 0 0.1rem var(--primary-color);
+    }
+
+    .contact-form button {
+        font-size: small;
+        width: 80%;
+        margin: auto;
+        margin-top: 5px;
+        margin-bottom: 10px;
+    }
 }
