--- a/portfolio-client/src/pages/Service/Service.css
+++ b/portfolio-client/src/pages/Service/Service.css
@@ -98,7 +98,8 @@
     .service__card {
         font-size: 15px;
         letter-spacing: 0px;
-        padding: 5px !important;
+        /* padding: 5px !important; */
+        font-size: 13px;
     }
 
     .service__card-title {
@@ -114,7 +115,7 @@
     }
 
     .icon-style {
-        width: 80px;
+        width: 50px;
     }
 
     .bg-custom-Color {
